# 4X-RTSEngine

./: .gitignore  CMakeLists.txt  README.md
data/content/: units.json
data/scenarios/: demo.json  premade.json
engine/include/company/engine/: Config.hpp  Content.hpp  EventBus.hpp  Expression.hpp  Pathfinding.hpp  Rng.hpp  SaveLoad.hpp  World.hpp
engine/src/: Config.cpp  Content.cpp  EventBus.cpp  Expression.cpp  Pathfinding.cpp  Rng.cpp  SaveLoad.cpp  World.cpp
game/src/: main.cpp
tests/: test_determinism.cpp  test_expression.cpp  test_pathfinding.cpp  test_saveload.cpp
